pynqrypt-vitis-hls/pynqrypt/.autopilot/db/clang.err.log
hw-impl/src/pynqrypt.cpp:19:14: error: no member named 'cout' in namespace 'std'
        std::cout << "round key " << i << ": " << std::hex << round_keys[i] << std::endl;
        ~~~~~^
hw-impl/src/pynqrypt.cpp:19:56: error: no member named 'hex' in namespace 'std'
        std::cout << "round key " << i << ": " << std::hex << round_keys[i] << std::endl;
                                                  ~~~~~^
hw-impl/src/pynqrypt.cpp:19:85: error: no member named 'endl' in namespace 'std'
        std::cout << "round key " << i << ": " << std::hex << round_keys[i] << std::endl;
                                                                               ~~~~~^
3 errors generated.
